Partially addressing PR review